--- a/booking-app/package.json
+++ b/booking-app/package.json
@@ -16,7 +16,7 @@
 		"build-html": "copyfiles -u 1 \"src/*.html\" dist",
 		"build-img": "copyfiles -u 1 \"src/img/*.html\" dist/img",
 		"lint-prod": "nodemon --watch . --exec eslint --cache --ignore-path .gitignore --ext .js,.ts .",
-		"lint-dev": "nodemon --watch . --exec eslint --cache --ignore-path .gitignore -c .eslintrc.debug.js --ext .js,.ts .",
+		"lint-dev": "nodemon --watch . --exec eslint --cache --ignore-path .gitignore -c .eslintrc.development.js --ext .js,.ts .",
 		"lint-fix": "nodemon --watch . --exec eslint --fix --ignore-path .gitignore --ext .js,.ts .",
 		"format-fix": "prettier --fix \"src/**/*.js\"",
 		"clean-dist": "node -e \"require('fs-extra').emptyDir('./dist')"
@@ -40,11 +40,15 @@
 		"@babel/preset-react": "^7.22.15",
 		"babel-loader": "^9.1.3",
 		"copyfiles": "^2.4.1",
-		"eslint": "^8.50.0",
+		"eslint": "^8.51.0",
 		"eslint-config-airbnb": "^19.0.4",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-config-prettier-check": "^1.0.0",
 		"eslint-formatter-pretty": "^5.0.0",
 		"eslint-plugin-import": "^2.28.1",
 		"eslint-plugin-jsx-a11y": "^6.7.1",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^5.0.0",
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"fs-extra": "^11.1.1",
