Booking app started

--- a/booking-app/package.json
+++ b/booking-app/package.json
@@ -7,15 +7,18 @@
 		"start": "webpack server --mode development --config ./config/webpack.common.js",
 		"watch-dev": "webpack --watch src --mode development --config ./config/webpack.common.js",
 		"build-dev": "webpack --mode development --config ./config/webpack.common.js",
+		"build-dev-all": "webpack --mode development --config ./config/webpack.common.js && npm run build-css-html",
 		"build-dev-watch": "nodemon --watch src --exec npm run build-dev",
 		"build-prod": "webpack --mode production --config ./config/webpack.common.js",
 		"build-css": "npm run build-css-files && npm run build-sass",
-		"build-css-watch": "nodemon --watch src --exec npm run build-css",
+		"build-css-watch": "nodemon -e scss,css --watch ./src/style --watch ./src/style/scss --exec npm run build-css",
 		"build-sass": "sass src/style/scss/_0-main.scss:dist/style/main.css",
 		"build-css-files": "copyfiles -u 1 \"src/style/*.css\" dist",
+		"build-css-app": "copyfiles -u 1 \"src/style/app.css\" dist",
 		"build-html": "copyfiles -u 1 \"src/*.html\" dist",
+		"build-css-html": "npm run build-html && npm run build-css",
 		"build-img": "copyfiles -u 1 \"src/img/*.html\" dist/img",
-		"lint-prod": "nodemon --watch . --exec eslint --cache --ignore-path .gitignore --ext .js,.ts .",
+		"lint-prod": "nodemon --watch . --exec eslint --cache --ignore-path .gitignore -c .eslintrc.js --ext .js,.ts .",
 		"lint-dev": "nodemon --watch . --exec eslint --cache --ignore-path .gitignore -c .eslintrc.development.js --ext .js,.ts .",
 		"lint-fix": "nodemon --watch . --exec eslint --fix --ignore-path .gitignore --ext .js,.ts .",
 		"format-fix": "prettier --fix \"src/**/*.js\"",
@@ -25,13 +28,22 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^6.4.2",
+		"@fortawesome/free-brands-svg-icons": "^6.4.2",
+		"@fortawesome/free-regular-svg-icons": "^6.4.2",
+		"@fortawesome/free-solid-svg-icons": "^6.4.2",
+		"@fortawesome/react-fontawesome": "^0.2.0",
 		"clean-webpack-plugin": "^4.0.0",
 		"cors": "^2.8.5",
+		"date-fns": "^2.30.0",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"path": "^0.12.7",
+		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-date-range": "^1.4.0",
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.16.0"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.22.15",
@@ -40,6 +52,7 @@
 		"@babel/preset-react": "^7.22.15",
 		"babel-loader": "^9.1.3",
 		"copyfiles": "^2.4.1",
+		"css-loader": "^6.8.1",
 		"eslint": "^8.51.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-prettier": "^9.0.0",
@@ -51,9 +64,11 @@
 		"eslint-plugin-prettier": "^5.0.0",
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
+		"file-loader": "^6.2.0",
 		"fs-extra": "^11.1.1",
-		"prettier": "^3.0.3",
+		"prettier": "3.0.3",
 		"sass": "^1.68.0",
+		"style-loader": "^3.3.3",
 		"webpack": "^5.88.2",
 		"webpack-cli": "^5.1.4",
 		"webpack-dev-server": "^4.15.1",
